--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "connect-session-sequelize": "^7.1.7",
     "dotenv": "^16.4.5",
     "express-handlebars": "^7.1.2",
-    "express-session": "^1.18.0"
+    "express-session": "^1.18.0",
+    "sequelize": "^6.37.1"
   }
 }
