--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "seed": "node seeds/seed.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +14,8 @@
     "connect-session-sequelize": "^7.1.7",
     "dotenv": "^16.4.5",
     "express-handlebars": "^7.1.2",
-    "express-session": "^1.18.0"
+    "express-session": "^1.18.0",
+    "sequelize": "^6.37.1",
+    "mysql2": "^2.2.5"
   }
 }
