--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "bcrypt": "^5.1.1",
     "connect-session-sequelize": "^7.1.7",
     "dotenv": "^16.4.5",
+    "express": "^4.18.3",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.18.0",
-    "sequelize": "^6.37.1",
-    "mysql2": "^2.2.5"
+    "mysql2": "^3.9.2",
+    "sequelize": "^6.37.1"
   }
 }
