--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 DB_NAME='fontfinder_db'
 DB_USER='root'
 DB_PASSWORD=''
-secret = "61oETzKXQAGaYdkL5gEmGeJJFuYh7EQnp2XdTP1o/Vo="
+DB_SECRET = "61oETzKXQAGaYdkL5gEmGeJJFuYh7EQnp2XdTP1o/Vo="
